feat(vscode): auto install extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,112 @@
 		"ghcr.io/devcontainers/features/common-utils:2": {},
 		"ghcr.io/devcontainers/features/python:1": {},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"abhijoybasak.nestjs-files",
+				"aeschli.vscode-css-formatter",
+				"ajmnz.prisma-import",
+				"alfredbirk.git-add-commit-push",
+				"andricdev.vscode-env-selector",
+				"archsense.architecture-view-nestjs",
+				"aslamanver.vsc-export",
+				"better-ts-errors.better-ts-errors",
+				"bracketpaircolordlw.bracket-pair-color-dlw",
+				"cardinal90.multi-cursor-case-preserve",
+				"chakrounanas.turbo-console-log",
+				"chouzz.vscode-better-align",
+				"christian-kohler.npm-intellisense",
+				"christian-kohler.path-intellisense",
+				"clinyong.vscode-css-modules",
+				"codeandstuff.package-json-upgrade",
+				"codezombiech.gitignore",
+				"csstools.postcss",
+				"davidanson.vscode-markdownlint",
+				"dbaeumer.vscode-eslint",
+				"deque-systems.vscode-axe-linter",
+				"donjayamanne.githistory",
+				"drknoxy.eslint-disable-snippets",
+				"dskwrk.vscode-generate-getter-setter",
+				"earshinov.simple-alignment",
+				"ecmel.vscode-html-css",
+				"editorconfig.editorconfig",
+				"eriklynd.json-tools",
+				"esbenp.prettier-vscode",
+				"formulahendry.auto-close-tag",
+				"formulahendry.auto-rename-tag",
+				"formulahendry.docker-explorer",
+				"formulahendry.docker-extension-pack",
+				"genieai.chatgpt-vscode",
+				"george3447.docker-run",
+				"ghmcadams.lintlens",
+				"github.copilot",
+				"github.copilot-chat",
+				"hashhar.gitattributes",
+				"henriiik.docker-linter",
+				"huizhou.githd",
+				"ibm.output-colorizer",
+				"igorsbitnev.error-gutters",
+				"inferrinizzard.prettier-sql-vscode",
+				"irongeek.vscode-env",
+				"jakob101.relativepath",
+				"jannisx11.batch-rename-extension",
+				"jerrygoyal.shortcut-menu-bar",
+				"kaellarkin.hugo-tags-helper",
+				"kiranshah.chatgpt-helper",
+				"ldlework.eslintlens",
+				"leizongmin.node-module-intellisense",
+				"mattlott.copy-github-url",
+				"mattpocock.ts-error-translator",
+				"mechatroner.rainbow-csv",
+				"mflo999.lintel",
+				"mgmcdermott.vscode-language-babel",
+				"mguellsegarra.highlight-on-copy",
+				"mhutchie.git-graph",
+				"mikestead.dotenv",
+				"mkxml.vscode-filesize",
+				"moppitz.vscode-extension-auto-import",
+				"ms-azuretools.vscode-docker",
+				"ms-python.autopep8",
+				"ms-python.debugpy",
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"ms-vscode.live-server",
+				"ms-vscode.vscode-typescript-next",
+				"naumovs.color-highlight",
+				"nhoizey.gremlins",
+				"nicoespeon.abracadabra",
+				"nikolaosgeorgiou.html-fmt-vscode",
+				"oderwat.indent-rainbow",
+				"p1c2u.docker-compose",
+				"pflannery.vscode-versionlens",
+				"piyush-bhatt.vscode-port",
+				"pmneo.tsimporter",
+				"prisma.prisma",
+				"rvest.vs-code-prettier-eslint",
+				"samson.prisma-schema-tool",
+				"shd101wyy.markdown-preview-enhanced",
+				"simonsiefke.svg-preview",
+				"solomonkinard.git-blame",
+				"steoates.autoimport",
+				"stneveadomi.grepc",
+				"stringham.move-ts",
+				"stylelint.vscode-stylelint",
+				"tyriar.sort-lines",
+				"usernamehw.errorlens",
+				"visualstudioexptteam.intellicode-api-usage-examples",
+				"visualstudioexptteam.vscodeintellicode",
+				"vunguyentuan.vscode-postcss",
+				"waderyan.gitblame",
+				"wix.vscode-import-cost",
+				"wmaurer.change-case",
+				"xaviernaves.darker-dark",
+				"yoavbls.pretty-ts-errors",
+				"zainchen.json",
+				"zignd.html-css-class-completion"
+			]
+		}
 	}
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -16,9 +122,6 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "uname -a",
-
-	// Configure tool-specific properties.
-	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
