--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "reset": "rm -rf node_modules src/web/node_modules src/api/node_modules && pnpm --prefix src/web install && pnpm --prefix src/api install",
+    "reset": "rm -rf node_modules src/web/node_modules src/api/node_modules && pnpm install && pnpm --prefix src/web install && pnpm --prefix src/api install && pnpm --prefix src/cli install",
     "dev:web": "pnpm --prefix src/web dev",
     "dev:api": "pnpm --prefix src/api run start",
     "build:api": "IS_BUILDING=true pnpm --prefix src/api build",
-    "build:web": "IS_BUILDING=true pnpm --prefix src/web build"
-
+    "build:web": "IS_BUILDING=true pnpm --prefix src/web build",
+    "analyze": "pnpm --prefix src/cli job:codebase"
 
   },
   "keywords": [],
