--- a/src/cli/package.json
+++ b/src/cli/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "job:codebase": "ts-node ./src/codebase.ts"
+    "job:codebase": "ts-node ./src/codebase.ts",
+    "vt": "ts-node ./src/index.ts"
   },
   "keywords": [],
   "author": "",
