--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
   "author": "Daniel Donahoe",
   "license": "ISC",
   "dependencies": {
-    "commander": "12.1.0"
+    "@oclif/command": "1.8.36",
+    "@types/clear": "0.1.4",
+    "@types/figlet": "1.7.0",
+    "chalk": "5.3.0",
+    "clear": "0.1.0",
+    "commander": "12.1.0",
+    "figlet": "1.8.0",
+    "inquirer": "12.2.0"
   },
   "devDependencies": {
     "eslint": "~8.57.0"
