--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "skipFiles": ["<node_internals>/**"],
       "runtimeExecutable": "node",
       "runtimeArgs": ["--loader", "ts-node/esm", "--no-warnings=ExperimentalWarning"],
-      "program": "${workspaceFolder}/bin/dev.js",
+      "program": "${workspaceFolder}src/cli/bin/dev.js",
       "args": ["hello", "world"]
     }
   ]
