--- a/package.json
+++ b/package.json
@@ -1,40 +1,56 @@
 {
-  "name": "db-admin",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "reset": "rm -rf node_modules src/web/node_modules src/api/node_modules && pnpm install && pnpm --prefix src/web install && pnpm --prefix src/api install && pnpm --prefix src/cli install",
-    "dev:web": "pnpm --prefix src/web dev",
-    "dev:api": "pnpm --prefix src/api run start",
-    "build:api": "IS_BUILDING=true pnpm --prefix src/api build",
-    "build:web": "IS_BUILDING=true pnpm --prefix src/web build",
-    "analyze": "pnpm --prefix src/cli job:codebase",
-    "cli": "ts-node ./src/cli/bin/dev.js",
-    "cli:build": "pnpm --prefix src/cli build",
-    "cli:lint": "pnpm --prefix src/cli lint",
-    "cli:postpack": "pnpm --prefix src/cli postpack",
-    "cli:posttest": "pnpm --prefix src/cli posttest",
-    "cli:prepack": "pnpm --prefix src/cli prepack",
-    "cli:test": "pnpm --prefix src/cli test",
-    "cli:version": "pnpm --prefix src/cli version"
-  },
-  "keywords": [],
-  "author": "Daniel Donahoe",
-  "license": "ISC",
-  "dependencies": {
-    "@oclif/command": "1.8.36",
-    "@types/clear": "0.1.4",
-    "@types/figlet": "1.7.0",
-    "chalk": "5.3.0",
-    "clear": "0.1.0",
-    "commander": "12.1.0",
-    "figlet": "1.8.0",
-    "inquirer": "12.2.0",
-    "ts-node": "10.9.2"
-  },
-  "devDependencies": {
-    "eslint": "~8.57.0"
-  }
+    "name": "db-admin",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "reset": "rm -rf node_modules src/web/node_modules src/api/node_modules && pnpm install && pnpm --prefix src/web install && pnpm --prefix src/api install && pnpm --prefix src/cli install",
+        "dev:web": "pnpm --prefix src/web dev",
+        "dev:api": "pnpm --prefix src/api run start",
+        "build:api": "IS_BUILDING=true pnpm --prefix src/api build",
+        "build:web": "IS_BUILDING=true pnpm --prefix src/web build",
+        "analyze": "pnpm --prefix src/cli job:codebase",
+        "cli": "pnpm --prefix src/cli cli",
+        "cli:build": "pnpm --prefix src/cli build",
+        "cli:lint": "pnpm --prefix src/cli lint",
+        "cli:postpack": "pnpm --prefix src/cli postpack",
+        "cli:posttest": "pnpm --prefix src/cli posttest",
+        "cli:prepack": "pnpm --prefix src/cli prepack",
+        "cli:test": "pnpm --prefix src/cli test",
+        "cli:version": "pnpm --prefix src/cli version"
+    },
+    "keywords": [],
+    "author": "Daniel Donahoe",
+    "license": "ISC",
+    "dependencies": {
+        "@oclif/command": "1.8.36",
+        "@oclif/core": "4.0.36",
+        "@oclif/plugin-help": "6.2.19",
+        "@oclif/plugin-plugins": "5.4.22",
+        "@types/clear": "0.1.4",
+        "@types/figlet": "1.7.0",
+        "chalk": "5.3.0",
+        "clear": "0.1.0",
+        "commander": "12.1.0",
+        "figlet": "1.8.0",
+        "inquirer": "12.2.0"
+    },
+    "devDependencies": {
+        "@oclif/prettier-config": "0.2.1",
+        "@oclif/test": "4.1.3",
+        "@types/chai": "5.0.1",
+        "@types/mocha": "10.0.10",
+        "@types/node": "22.10.2",
+        "chai": "5.1.2",
+        "eslint": "~8.57.1",
+        "eslint-config-oclif": "5.2.2",
+        "eslint-config-oclif-typescript": "3.1.13",
+        "eslint-config-prettier": "9.1.0",
+        "mocha": "11.0.1",
+        "oclif": "4.16.2",
+        "shx": "0.3.4",
+        "ts-node": "10.9.2",
+        "typescript": "5.7.2"
+    }
 }
