--- a/src/cli/package.json
+++ b/src/cli/package.json
@@ -8,26 +8,26 @@
     },
     "bugs": "https://github.com/cli/vtcli/issues",
     "dependencies": {
-        "@oclif/core": "^4",
-        "@oclif/plugin-help": "^6",
-        "@oclif/plugin-plugins": "^5"
+        "@oclif/core": "4.0.36",
+        "@oclif/plugin-help": "6.2.19",
+        "@oclif/plugin-plugins": "5.4.22"
     },
     "devDependencies": {
-        "@oclif/prettier-config": "^0.2.1",
-        "@oclif/test": "^4",
-        "@types/chai": "^4",
-        "@types/mocha": "^10",
-        "@types/node": "^18",
-        "chai": "^4",
-        "eslint": "^8",
-        "eslint-config-oclif": "^5",
-        "eslint-config-oclif-typescript": "^3",
-        "eslint-config-prettier": "^9",
-        "mocha": "^10",
-        "oclif": "^4",
-        "shx": "^0.3.3",
-        "ts-node": "^10",
-        "typescript": "^5"
+        "@oclif/prettier-config": "0.2.1",
+        "@oclif/test": "4.1.3",
+        "@types/chai": "5.0.1",
+        "@types/mocha": "10.0.10",
+        "@types/node": "22.10.2",
+        "chai": "5.1.2",
+        "eslint": "9.16.0",
+        "eslint-config-oclif": "5.2.2",
+        "eslint-config-oclif-typescript": "3.1.13",
+        "eslint-config-prettier": "9.1.0",
+        "mocha": "11.0.1",
+        "oclif": "4.16.2",
+        "shx": "0.3.4",
+        "ts-node": "10.9.2",
+        "typescript": "5.7.2"
     },
     "engines": {
         "node": ">=18.0.0"
@@ -67,7 +67,8 @@
         "posttest": "pnpm run lint",
         "prepack": "oclif manifest && oclif readme",
         "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-        "version": "oclif readme && git add README.md"
+        "version": "oclif readme && git add README.md",
+        "cli": "./bin/dev.js"
     },
     "types": "dist/index.d.ts"
 }
